# projectz

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  build.rs  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
art/: blender_assets.cats.txt  my_game.blend  projectz.blend  projectz.tiled-project  projectz.tiled-session
assets/ani/: idle.gltf
assets/blueprints/: Ground.glb  Player.glb  Wall.glb
assets/levels/: World.glb  World.meta.ron
assets/maps/: arena.map.ron
assets/maps/desert/: barrel.tsx  bridge.tsx  chest.tsx  desert.tmx  floor.tsx  library.tsx  structure.tsx  wall.tsx
assets/materials/: FloorMaterial.glb  PlayerMaterial.glb
assets/meshes/: character.glb  man.glb  man.gltf  skeleton.gltf  xbot.gltf
assets/res/: windows_icon.rc
assets/textures/: np26.dds  np27.dds  np28.dds
assets/textures/room/arena/: .gitignore
src/: assets.rs  camera.rs  dev.rs  dev_tools.rs  environment.rs  lib.rs  main.rs  physics.rs  player.rs  prelude.rs  sprite_3d.rs  window.rs
src/environment/: map_loader.rs  props.rs
src/player/: animations.rs  input.rs
